src/objects/FAQ__c.object
<CustomObject><fields>
        <fullName>FAQ_Detail__c</fullName>
        <label>FAQ Detail</label>
        <length>32768</length>
        <type>Html</type>
    </fields><fields>
        <fullName>FAQ_Sequence__c</fullName>
        <label>FAQ Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields><fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableChangeDataCapture>false</enableChangeDataCapture><enableFeeds>false</enableFeeds><enableHistory>false</enableHistory><enableReports>false</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>Read</externalSharingModel><label>FAQ</label><nameField>
        <label>FAQ Header</label>
        <type>Text</type>
    </nameField><pluralLabel>FAQs</pluralLabel><sharingModel>ReadWrite</sharingModel><visibility>Public</visibility><listViews>
        <fullName>All_FAQs</fullName>
        <columns>NAME</columns>
        <columns>FAQ_Detail__c</columns>
        <columns>IsActive__c</columns>
        <columns>FAQ_Sequence__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All FAQs</label>
    </listViews></CustomObject>